Bug 333779 - When saving, default "New Image" filename does not warn about overwriting
Summary: When saving, default "New Image" filename does not warn about overwriting
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Krita Gemini (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: HI normal
Target Milestone: ---
Assignee: Arjen Hiemstra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-23 16:08 UTC by Stuart Dickson
Modified: 2014-05-01 14:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stuart Dickson 2014-04-23 16:08:02 UTC
When a user creates a new image and tries to save, "New Image" is the suggested filename, even if such a filename already exists.

If the user then chooses to save this default filename, even when one with this name already exists, no confirmation dialog is displayed.

A confirmation dialog should be displayed.
Additionally it would be useful if the default filename does indeed conflict with an existing file, for it to suggest an alternative (maybe by appending a number or timestamp?)

Some observations:
- If the user chooses save-as previously when using the software, this problem does not manifest for future attempts to save
- You can see that the file-save dialog behaves differently when a filename is automatically injected in to the filename - the confirmation dialog is displayed - but for the first instance upon startup and clicking save, no extension is supplied
- Launching a second instance displays the "working" save dialog
Comment 1 Arjen Hiemstra 2014-05-01 14:34:03 UTC
Git commit b0b50a14bd10d6fd6a366be71b15099eeedc3185 by Arjen Hiemstra.
Committed on 01/05/2014 at 13:43.
Pushed by ahiemstra into branch 'master'.

gemini/sketch: Set the URL for new images to "New Image.kra"

On windows, the file dialog does not automatically add
the file extension, making the overwrite check fail. Adding
it through the URL fixes the initial check. Note that we
still have a problem when the user types in something with
the same name as an existing file but without the extension.

M  +2    -0    krita/sketch/DocumentManager.cpp

http://commits.kde.org/calligra/b0b50a14bd10d6fd6a366be71b15099eeedc3185