gemini/sketch: Set the URL for new images to "New Image.kra"

On windows, the file dialog does not automatically add
the file extension, making the overwrite check fail. Adding
it through the URL fixes the initial check. Note that we
still have a problem when the user types in something with
the same name as an existing file but without the extension.

BUG: 333779